--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,5 +7,5 @@
     "allowSyntheticDefaultImports": true,
     "strict": true
   },
-  "include": ["vite.config.mjs", "./src/**/*.{js,ts,jsx,tsx}"]
+  "include": ["./src/**/*.{js,ts,jsx,tsx}"]
 }
