--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@stylexjs/dev-runtime": "^0.7.5",
     "@stylexjs/stylex": "^0.7.5",
+    "@types/node": "^22.2.0",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
