--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "vite-plugin-stylex": "^0.10.1"
   },
   "devDependencies": {
-    "@crazy-overlord/phantomartist": "link:/home/collin/Git/phantomartist",
+    "@crazy-overlord/phantomartist": "file:/home/collin/Git/phantomartist",
     "@stylexjs/eslint-plugin": "^0.7.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
