--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.8",
-    "types": "link:@apollo/client/types",
+    "types": "file:@apollo/client/types",
     "typescript": "^5.5.3",
     "vite": "^5.3.4"
   },
