--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.2",
+    "@crazy-overlord/phantomartist": "^0.0.18",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@stylexjs/dev-runtime": "^0.7.5",
@@ -24,7 +25,6 @@
     "vite-plugin-stylex": "^0.10.1"
   },
   "devDependencies": {
-    "@crazy-overlord/phantomartist": "file:/home/collin/Git/phantomartist",
     "@stylexjs/eslint-plugin": "^0.7.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -34,7 +34,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.8",
-    "types": "file:@apollo/client/types",
+    "types": "@apollo/client/types",
     "typescript": "^5.5.3",
     "vite": "^5.3.4"
   },
