--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.2",
-    "@crazy-overlord/phantomartist": "^0.0.18",
+    "@crazy-overlord/phantomartist": "link:../phantomartist",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@stylexjs/dev-runtime": "^0.7.5",
