--- a/package.json
+++ b/package.json
@@ -10,33 +10,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^3.11.2",
+    "@apollo/client": "^3.11.8",
     "@collinlucke/phantomartist": "link:../phantomartist",
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@stylexjs/dev-runtime": "^0.7.5",
     "@stylexjs/stylex": "^0.7.5",
-    "@types/node": "^22.2.0",
+    "@types/node": "^22.5.4",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0",
+    "react-router-dom": "^6.26.2",
     "vite-plugin-stylex": "^0.10.1"
   },
   "devDependencies": {
     "@stylexjs/eslint-plugin": "^0.7.5",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "@typescript-eslint/parser": "^7.16.1",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.8",
-    "types": "@apollo/client/types",
-    "typescript": "^5.5.3",
-    "vite": "^5.3.4"
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "types": "link:@apollo/client/types",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.5"
   },
   "overrides": {
     "vite-plugin-stylex": {
