--- a/package.json
+++ b/package.json
@@ -4,21 +4,25 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "preinstall": "node set-dependency.js",
+    "postinstall": "node link-package.js",
+    "dev": "NODE_ENV=development && vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
-    "@collinlucke/phantomartist": "file:../phantomartist",
+    "@collinlucke/phantomartist": "link:../phantomartist",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@stylexjs/dev-runtime": "^0.7.5",
     "@stylexjs/stylex": "^0.7.5",
-    "@types/node": "^22.5.4",
     "apollo-upload-client": "^18.0.1",
+    "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
@@ -28,6 +32,7 @@
   },
   "devDependencies": {
     "@stylexjs/eslint-plugin": "^0.7.5",
+    "@types/node": "^22.7.3",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
@@ -36,7 +41,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.11",
-    "types": "link:@apollo/client/types",
+    "nodemon": "^3.1.7",
     "typescript": "^5.6.2",
     "vite": "^5.4.5"
   },
