--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "preinstall": "node set-dependency.js",
-    "postinstall": "node link-package.js",
     "dev": "NODE_ENV=development && vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -13,7 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
-    "@collinlucke/phantomartist": "link:../phantomartist",
+    "@collinlucke/phantomartist": "file:../phantomartist",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@stylexjs/dev-runtime": "^0.7.5",
