--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -13,6 +13,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Login to Docker Hub
         run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+      - name: Set Environment Variables
+        run: echo "GIT_REGISTRY_TOKEN=${{secrets.GIT_REGISTRY_TOKEN}}" >> $GITHUB_ENV
       - name: Build Docker Image
         run: docker build -t collinlucke/baphomet-ui . --build-arg NODE_ENV='production' --build-arg VITE_SERVER_BASE_URL=`${{secrets.VITE_SERVER_BASE_URL}}`
       - name: Publish Image to Docker Hub
