--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,9 +8,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      NPM_CONFIG_REGISTRY: https://registry.npmjs.org/
+      SECONDARY_REGISTRY: https://npm.pkg.github.com
     steps:
       - name: Checkout Source
         uses: actions/checkout@v4
+      - name: Configure Github Registry
+        run: echo "//npm.pkg.github.com/:_authToken=${{secrets.GIT_REGISTRY_TOKEN}}" > .npmrc
       - name: Login to Docker Hub
         run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
       - name: Set Environment Variables
