--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,17 +9,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      NPM_CONFIG_REGISTRY: https://registry.npmjs.org/
-      SECONDARY_REGISTRY: https://npm.pkg.github.com
+      NPM_CONFIG_REGISTRY: https://npm.pkg.github.com
     steps:
       - name: Checkout Source
         uses: actions/checkout@v4
       - name: Configure Github Registry
-        run: echo "//npm.pkg.github.com/:_authToken=${{secrets.GIT_REGISTRY_TOKEN}}" > .npmrc
+        run: echo "//npm.pkg.github.com/:_authToken=${{secrets.GIT_REGISTRY_TOKEN}}" > ~/.npmrc
       - name: Login to Docker Hub
         run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
-      - name: Set Environment Variables
-        run: echo "GIT_REGISTRY_TOKEN=${{secrets.GIT_REGISTRY_TOKEN}}" >> $GITHUB_ENV
       - name: Build Docker Image
         run: docker build -t collinlucke/baphomet-ui . --build-arg NODE_ENV='production' --build-arg VITE_SERVER_BASE_URL=`${{secrets.VITE_SERVER_BASE_URL}}`
       - name: Publish Image to Docker Hub
