--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,15 +15,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 22
-      - name: Create .npmrc
-        run: |
-          echo "registry=https://registry.npmjs.org/" > ~/.npmrc
-          echo "@collinlucke:registry=https://npm.pkg.github.com" >> ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GIT_REGISTRY_TOKEN }}" >> ~/.npmrc
       - name: Login to Docker Hub
         run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
       - name: Build Docker Image
-        run: docker build -t collinlucke/baphomet-ui . --build-arg NODE_ENV='production' --build-arg VITE_SERVER_BASE_URL=`${{secrets.VITE_SERVER_BASE_URL}}`
+        run: docker build -t collinlucke/baphomet-ui . --build-arg NODE_ENV='production' --build-arg VITE_SERVER_BASE_URL=`${{secrets.VITE_SERVER_BASE_URL}}` --build-arg GIT_REGISTRY_TOKEN=`${{secrets.GIT_REGISTRY_TOKEN}}`
       - name: Publish Image to Docker Hub
         run: docker push collinlucke/baphomet-ui:latest
 
