--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "scripts": {
     "preinstall": "node set-dependency.js",
     "postinstall": "node link-package.js",
-    "dev": "NODE_ENV=development && vite",
+    "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
-    "@collinlucke/phantomartist": "latest",
     "@emotion/babel-plugin": "^11.12.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -29,7 +28,8 @@
     "react-router-dom": "^6.26.2",
     "rollup-plugin-delete": "^2.1.0",
     "vite-plugin-static-copy": "^1.0.6",
-    "vite-plugin-stylex": "^0.10.1"
+    "vite-plugin-stylex": "^0.10.1",
+    "@collinlucke/phantomartist": "link:../phantomartist"
   },
   "devDependencies": {
     "@stylexjs/eslint-plugin": "^0.7.5",
