--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,17 +7,26 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Source
         uses: actions/checkout@v4
+
+      - name: Set Up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 22
 
-      - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Install Dependencies
+        run: |
+          npm install -g pnpm typescript
+          pnpm install
 
       - name: Build Docker Image
         run: |
@@ -29,15 +38,15 @@ jobs:
       - name: Publish Image to Docker Hub
         run: docker push collinlucke/baphomet-ui:latest
 
-  deploy:
-    needs: build
-    runs-on: self-hosted
-    steps:
-      - name: Pull Image from Docker Hub
-        run: docker pull collinlucke/baphomet-ui:latest
+  # deploy:
+  #   needs: build
+  #   runs-on: self-hosted
+  #   steps:
+  #     - name: Pull Image from Docker Hub
+  #       run: docker pull collinlucke/baphomet-ui:latest
 
-      - name: Delete Old Container
-        run: docker rm -f baphomet-ui-container
+  #     - name: Delete Old Container
+  #       run: docker rm -f baphomet-ui-container
 
-      - name: Run Docker Container
-        run: docker run -d -p 5173:80 --name baphomet-ui-container collinlucke/baphomet-ui
+  #     - name: Run Docker Container
+  #       run: docker run -d -p 5173:80 --name baphomet-ui-container collinlucke/baphomet-ui
