--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
-version: '3.8'
 services:
   app:
+    image: baphomet-ui
     build:
       context: .
       dockerfile: Dockerfile
@@ -9,4 +9,9 @@ services:
     environment:
       NODE_ENV: 'production'
       SERVER_BASE_URL: ${SERVER_BASE_URL}
-      GIT_REGISTRY_TOKEN: ${GIT_REGISTRY_TOKEN}
+    secrets:
+      - GIT_REGISTRY_TOKEN
+
+secrets:
+  GIT_REGISTRY_TOKEN:
+    external: true
