--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "version": "0.1.4",
   "type": "module",
   "scripts": {
-    "preinstall": "node set-dependency.js",
-    "postinstall": "node link-package.js",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "install:dev": "NODE_ENV=development pnpm install"
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
-    "@collinlucke/phantomartist": "link:../phantomartist",
+    "@collinlucke/phantomartist": "latest",
     "@emotion/babel-plugin": "^11.12.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
