--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Install Dependencies
         run: |
           npm install -g pnpm typescript
+          pnpm install
 
       - name: Build Docker Image
         run: |
