--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,13 +23,16 @@ jobs:
         with:
           node-version: 22
 
-      - name: Install Dependencies
+      - name: Configg for getting PhantomArtist
         env:
           GIT_REGISTRY_TOKEN: ${{ secrets.GIT_REGISTRY_TOKEN }}
+        run: echo "//npm.pkg.github.com/:_authToken=${GIT_REGISTRY_TOKEN}" >> ~/.npmrc
+
+      - name: Install Dependencies
         run: |
           npm install -g pnpm typescript
-          echo "//npm.pkg.github.com/:_authToken=${GIT_REGISTRY_TOKEN}" >> ~/.npmrc
-          pnpm install
+          pnpm install --include=dev
+          pnpm install --prod
 
       - name: Build Docker Image
         run: |
