--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,8 +31,7 @@ jobs:
       - name: Install Dependencies
         run: |
           npm install -g pnpm typescript
-          pnpm install --include=dev
-          pnpm install --prod
+          pnpm install
 
       - name: Build Docker Image
         run: |
