--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - '5173:80'
 
     environment:
-      NODE_ENV: 'production'
+      NODE_ENV: 'development'
       SERVER_BASE_URL: ${SERVER_BASE_URL}
 
     secrets:
