--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,13 @@
 services:
   app:
-    image: baphomet-ui
+    image: collinlucke/baphomet-ui
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - '5173:80'
+      - '80:80'
+      - '443:443'
     environment:
       NODE_ENV: 'production'
       SERVER_BASE_URL: ${SERVER_BASE_URL}
-    secrets:
-      - GIT_REGISTRY_TOKEN
-
-secrets:
-  GIT_REGISTRY_TOKEN:
-    external: true
+      GIT_REGISTRY_TOKEN: ${GIT_REGISTRY_TOKEN}
