--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -52,4 +52,4 @@ jobs:
         run: docker rm -f baphomet-ui-container
 
       - name: Run Docker Container
-        run: docker run -d -p 80:80 -p 443:443 --name baphomet-ui-container collinlucke/baphomet-ui
+        run: docker run -d -p 80:80 -p 443:443 collinlucke/baphomet-ui
