--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apollo-upload-client": "^18.0.1",
     "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
+    "hugeicons-react": "^0.3.0",
     "iconoir-react": "^7.9.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
