--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,10 +10,17 @@ jobs:
 
     steps:
       - name: Checkout Source
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set Up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
+        with:
+          install: true
+
+      - name: Create and use builder
+        run: |
+          docker buildx create --name mybuilder --driver docker-container --use 
+          docker buildx inspect --bootstrap
 
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
@@ -22,6 +29,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
+
+      - name: Cache Node.js modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Config for getting PhantomArtist
         env:
@@ -32,12 +47,14 @@ jobs:
         run: |
           npm install -g pnpm typescript
           pnpm install
+
       - name: Build Docker Image
         run: |
           docker build --build-arg NODE_ENV=development \
                        --build-arg SERVER_BASE_URL=${{ secrets.SERVER_BASE_URL }} \
                        --build-arg GIT_REGISTRY_TOKEN=${{ secrets.GIT_REGISTRY_TOKEN }} \
                        -t collinlucke/baphomet-ui .
+
       - name: Publish Image to Docker Hub
         run: docker push collinlucke/baphomet-ui:latest
 
