--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,7 +23,10 @@ jobs:
           docker buildx inspect --bootstrap
 
       - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -50,10 +53,10 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build --build-arg NODE_ENV=development \
-                       --build-arg SERVER_BASE_URL=${{ secrets.SERVER_BASE_URL }} \
-                       --build-arg GIT_REGISTRY_TOKEN=${{ secrets.GIT_REGISTRY_TOKEN }} \
-                       -t collinlucke/baphomet-ui .
+          docker buildX --build-arg NODE_ENV=development \
+                        --build-arg SERVER_BASE_URL=${{ secrets.SERVER_BASE_URL }} \
+                        --build-arg GIT_REGISTRY_TOKEN=${{ secrets.GIT_REGISTRY_TOKEN }} \
+                        -t collinlucke/baphomet-ui . --push
 
       - name: Publish Image to Docker Hub
         run: docker push collinlucke/baphomet-ui:latest
