--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -62,8 +62,11 @@ jobs:
     needs: build
     runs-on: self-hosted
     steps:
-      - name: Pull Docker Image with Elevated Privileges
-        run: PowerShell -File run_as_admin.ps1
+      - name: Pull Image from Docker Hub
+        run: docker pull collinlucke/baphomet-ui:latest
+      # - name: Pull Docker Image with Elevated Privileges
+      #   run: PowerShell -File run_as_admin.ps1
+
 
       - name: Delete Old Container
         run: docker rm -f baphomet-ui-container
