--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -62,6 +62,9 @@ jobs:
     needs: build
     runs-on: self-hosted
     steps:
+      - name: Checkout Source
+        uses: actions/checkout@v3
+
       # - name: Pull Image from Docker Hub
       #   run: docker pull collinlucke/baphomet-ui:latest
       - name: Pull Docker Image with Elevated Privileges
