Just catching up

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,12 @@
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  localhost;
+    listen 80 ssl;
+    listen 443 ssl;
+    listen [::]:80;
+    listen [::]:443;
+    server_name  collinlucke.com;
+
+    ssl_certificate /etc/ssl/certs/fullchain.pem;
+    ssl_certificate_key /etc/ssl/private/privkey.pem;
 
     location / {
         root   /usr/share/nginx/html;
