--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,8 +1,9 @@
-name: Deploy Baphomet UI
+name: Baphomet Server Deploy
+
 on:
-  push:
-    branches:
-      - main
+  release:
+    types:
+      - created
 
 jobs:
   build:
@@ -10,68 +11,39 @@ jobs:
 
     steps:
       - name: Checkout Source
-        uses: actions/checkout@v3
-
-      - name: Set Up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          install: true
-
-      - name: Create and use builder
-        run: |
-          docker buildx create --name mybuilder --driver docker-container --use 
-          docker buildx inspect --bootstrap
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: 20
 
-      - name: Cache Node.js modules
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: Config for getting PhantomArtist
-        env:
-          GIT_REGISTRY_TOKEN: ${{ secrets.GIT_REGISTRY_TOKEN }}
-        run: echo "//npm.pkg.github.com/:_authToken=${GIT_REGISTRY_TOKEN}" >> ~/.npmrc
+      - name: Install PNPM and Typescript
+        run: npm install -g pnpm typescript
 
       - name: Install Dependencies
+        run: pnpm install
+
+      - name: Run Tests
+        run: pnpm test
+
+      - name: Set Environment Variables
         run: |
-          npm install -g pnpm typescript
-          pnpm install
+          echo "ATLAS_DB_PASSWORD=${{ secrets.ATLAS_DB_PASSWORD }}" >> $GITHUB_ENV
+          echo "ATLAS_DB_USERNAME=${{ secrets.ATLAS_DB_USERNAME }}" >> $GITHUB_ENV
+          echo "ATLAS_CLUSTER=${{ secrets.ATLAS_CLUSTER }}" >> $GITHUB_ENV
+          echo "ATLAS_DB=${{ secrets.ATLAS_DB }}" >> $GITHUB_ENV
+          echo "ACCESS_TOKEN_SECRET=${{ secrets.ACCESS_TOKEN_SECRET }}" >> $GITHUB_ENV
+          echo "REFRESH_TOKEN_SECRET=${{ secrets.REFRESH_TOKEN_SECRET }}" >> $GITHUB_ENV
+          echo "SSL_CERT_PATH=$(echo "${{ secrets.SSL_CERT }}" | base64 --decode > certfile.cer)" >> $GITHUB_ENV
+          echo "SSL_KEY_PATH=$(echo "${{ secrets.SSL_PRIVATE_KEY }}" | base64 --decode > keyfile.key)" >> $GITHUB_ENV
+          echo "SSL_CA_PATH=$(echo "${{ secrets.SSL_CERT_INTERMEDIATE }}" | base64 --decode > intermediate.cer)" >> $GITHUB_ENV
 
       - name: Build Docker Image
-        run: |
-          docker buildx build --build-arg NODE_ENV=${{ secrets.NODE_ENV }} \
-                        --build-arg SERVER_BASE_URL=${{ secrets.SERVER_BASE_URL }} \
-                        --build-arg GIT_REGISTRY_TOKEN=${{ secrets.GIT_REGISTRY_TOKEN }} \
-                        -t collinlucke/baphomet-ui . --push
+        run: docker build -t collinlucke/baphomet-server:latest .
 
-  deploy:
-    needs: build
-    runs-on: self-hosted
-    steps:
-      - name: Checkout Source
-        uses: actions/checkout@v3
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      # - name: Pull Image from Docker Hub
-      #   run: docker pull collinlucke/baphomet-ui:latest
-      - name: Pull Docker Image with Elevated Privileges
-        run: powershell -File scripts/runAsAdmin.ps1
-
-      # - name: Delete Old Container
-      #   run: docker rm -f baphomet-ui-container
-
-      # - name: Run Docker Container
-      #   run: docker run -d -p 80:80 -p 443:443 collinlucke/baphomet-ui
+      - name: Push Docker Image
+        run: docker push collinlucke/baphomet-server:latest
