--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "baphomet-ui",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "vitest",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -17,6 +18,10 @@
     "@emotion/styled": "^11.13.0",
     "@stylexjs/dev-runtime": "^0.7.5",
     "@stylexjs/stylex": "^0.7.5",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@vitest/browser": "^2.1.8",
+    "@vitest/runner": "^2.1.8",
     "apollo-upload-client": "^18.0.1",
     "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
@@ -32,6 +37,7 @@
   },
   "devDependencies": {
     "@stylexjs/eslint-plugin": "^0.7.5",
+    "@testing-library/jest-dom": "^6.6.3",
     "@types/node": "^22.8.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -41,9 +47,12 @@
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "jsdom": "^25.0.1",
     "nodemon": "^3.1.7",
     "typescript": "^5.6.3",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vitest": "^2.1.8",
+    "vitest-browser-react": "^0.0.4"
   },
   "overrides": {
     "vite-plugin-stylex": {
