--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      - name: Update lockfile
+        run: pnpm update
+
       - name: Run Tests
         run: pnpm test
 
