--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baphomet-ui",
-  "version": "0.2.1-b",
+  "version": "0.2.1-c",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,26 +11,26 @@
     "install:dev": "NODE_ENV=development pnpm install"
   },
   "dependencies": {
-    "@apollo/client": "^3.11.8",
+    "@apollo/client": "^3.12.2",
     "@collinlucke/phantomartist": "latest",
-    "@emotion/babel-plugin": "^11.12.0",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/babel-plugin": "^11.13.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@stylexjs/dev-runtime": "^0.7.5",
     "@stylexjs/stylex": "^0.7.5",
-    "@testing-library/react": "^16.0.1",
+    "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
     "@vitest/browser": "^2.1.8",
     "@vitest/runner": "^2.1.8",
     "apollo-upload-client": "^18.0.1",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "graphql": "^16.9.0",
     "hugeicons-react": "^0.3.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "^6.28.0",
     "rollup-plugin-delete": "^2.1.0",
     "vite-plugin-static-copy": "^1.0.6",
     "vite-plugin-stylex": "^0.10.1"
@@ -38,19 +38,19 @@
   "devDependencies": {
     "@stylexjs/eslint-plugin": "^0.7.5",
     "@testing-library/jest-dom": "^6.6.3",
-    "@types/node": "^22.8.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/node": "^22.10.1",
+    "@types/react": "^18.3.15",
+    "@types/react-dom": "^18.3.4",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint-plugin-react-refresh": "^0.4.16",
     "jsdom": "^25.0.1",
     "nodemon": "^3.1.7",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.10",
+    "typescript": "^5.7.2",
+    "vite": "^5.4.11",
     "vitest": "^2.1.8",
     "vitest-browser-react": "^0.0.4"
   },
