--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,6 +27,9 @@ jobs:
           echo "@collinlucke:registry=https://npm.pkg.github.com" >> ~/.npmrc
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.GIT_REGISTRY_TOKEN }}" >> ~/.npmrc
 
+      - name: Copy .npmrc to Docker Context
+        run: cp .npmrc .
+
       - name: Install Dependencies
         run: pnpm install
 
