--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -49,10 +49,10 @@ jobs:
           echo "SSL_CA_PATH=$(echo "${{ secrets.SSL_CERT_INTERMEDIATE }}" | base64 --decode > intermediate.cer)" >> $GITHUB_ENV
 
       - name: Build Docker Image
-        run: docker build -t collinlucke/baphomet-server:latest .
+        run: docker build -t collinlucke/baphomet-ui:latest .
 
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Push Docker Image
-        run: docker push collinlucke/baphomet-server:latest
+        run: docker push collinlucke/baphomet-ui:latest
