--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baphomet-ui",
-  "version": "0.2.1-c",
+  "version": "0.3.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
