--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,5 @@
     "outDir": "dist"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "**/unused-*"]
 }
