--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@stylexjs/stylex": "^0.7.5",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/react-router-dom": "^5.3.3",
     "@vitest/browser": "^2.1.8",
     "@vitest/runner": "^2.1.8",
     "apollo-upload-client": "^18.0.1",
@@ -27,7 +28,7 @@
     "hugeicons-react": "^0.3.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
-    "react-router-dom": "^6.28.0",
+    "react-router-dom": "^6.30.1",
     "rollup-plugin-delete": "^2.1.0",
     "vite-plugin-static-copy": "^1.0.6",
     "vite-plugin-stylex": "^0.10.1"
