--- a/.github/workflows/baphomet-ui-build.yaml
+++ b/.github/workflows/baphomet-ui-build.yaml
@@ -44,6 +44,7 @@ jobs:
         env:
           CI: true
           SITE_URL: ${{ inputs.site-url }}
+          GRAPHQL_BAPHOMET_SERVER_RENDER_URL: ${{ secrets.GRAPHQL_BAPHOMET_SERVER_RENDER_URL }}
         run: |
           npm install --global pnpm
           pnpm install
