--- a/.github/workflows/baphomet-ui-orchestration.yaml
+++ b/.github/workflows/baphomet-ui-orchestration.yaml
@@ -3,7 +3,7 @@
 # More information under https://docs.ionos.space/docs/github-actions-customization/
 # version: 2022-07-21
 
-name: "Deploy Now: Orchestration"
+name: 'Deploy Now: Orchestration'
 run-name: "Deploy Now: Build baphomet-ui · ${{ github.event.head_commit.message || format('Triggered by {0}', github.triggering_actor) }}"
 
 on:
@@ -24,9 +24,8 @@ jobs:
         with:
           api-key: ${{ secrets.IONOS_API_KEY }}
           service-host: api-us.ionos.space
-          project-id: dae5d77f-49c9-48cc-8523-1ffcffd22dea
+          project-id: 835b7c63-1f3f-451b-8490-25260324e54f
           action: retrieve-info
-
 
   build:
     name: build
@@ -50,6 +49,6 @@ jobs:
         with:
           api-key: ${{ secrets.IONOS_API_KEY }}
           service-host: api-us.ionos.space
-          project-id: dae5d77f-49c9-48cc-8523-1ffcffd22dea
+          project-id: 835b7c63-1f3f-451b-8490-25260324e54f
           branch-id: ${{ needs.retrieve-project.outputs.branch-id }}
           action: dispatch-deployments
