--- a/nginx.conf
+++ b/nginx.conf
@@ -3,21 +3,15 @@ server {
     listen 443 ssl;
     listen [::]:80;
     listen [::]:443;
-    server_name  collinlucke.com;
+    server_name  baphomet.collinlucke.com;
 
     ssl_certificate /etc/ssl/certs/fullchain.pem;
     ssl_certificate_key /etc/ssl/private/privkey.pem;
 
-    location /baphomet {
-        alias   /usr/share/nginx/html;
+    location / {
+        root   /usr/share/nginx/html;
         index  index.html index.htm;
-        try_files $uri $uri/ /baphomet/index.html;
-    }
-
-    location /baphomet/ {
-        alias   /usr/share/nginx/html/;
-        index  index.html index.htm;
-        try_files $uri $uri/ /baphomet/index.html;
+        try_files $uri $uri/ /index.html;
     }
 
     error_page  500 502 503 504  /50x.html;
