Fix configuration for subdomain deployment with separate Deploy Now projects

--- a/.deploy-now/config.json
+++ b/.deploy-now/config.json
@@ -1,11 +1,5 @@
 {
   "name": "baphomet-ui",
-  "domains": [
-    {
-      "domain": "baphomet.collinlucke.com",
-      "type": "custom"
-    }
-  ],
   "build": {
     "outputDirectory": "dist",
     "commands": [
@@ -16,8 +10,8 @@
   "routing": {
     "rules": [
       {
-        "source": "/**",
-        "destination": "/index.html",
+        "source": "/baphomet/**",
+        "destination": "/baphomet/index.html",
         "type": "rewrite"
       }
     ]
