Update nginx config to accept both subdomain and default URLs

--- a/.deploy-now/config.json
+++ b/.deploy-now/config.json
@@ -10,8 +10,8 @@
   "routing": {
     "rules": [
       {
-        "source": "/baphomet/**",
-        "destination": "/baphomet/index.html",
+        "source": "/**",
+        "destination": "/index.html",
         "type": "rewrite"
       }
     ]
