--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
     listen 443 ssl;
     listen [::]:80;
     listen [::]:443;
-    server_name  baphomet.collinlucke.com;
+    server_name  baphomet.collinlucke.com home-5018222688.app-ionos.space;
 
     ssl_certificate /etc/ssl/certs/fullchain.pem;
     ssl_certificate_key /etc/ssl/private/privkey.pem;
