fix: update GitHub Pages deployment to use official actions
- Switch from peaceiris/actions-gh-pages to official GitHub Pages actions
- Add proper permissions for GitHub Pages deployment
- Add CNAME file for custom domain support
- Enable concurrency control for deployments

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,11 @@ services:
   - type: web
     name: baphomet-ui
     env: node
-    buildCommand: pnpm install && pnpm run build
+    buildCommand: |
+      echo "registry=https://registry.npmjs.org/" > .npmrc
+      echo "@collinlucke:registry=https://npm.pkg.github.com" >> .npmrc
+      echo "//npm.pkg.github.com/:_authToken=${GIT_REGISTRY_TOKEN}" >> .npmrc
+      pnpm install && pnpm run build
     staticPublishPath: dist
     envVars:
       - key: GRAPHQL_BAPHOMET_SERVER_RENDER_URL
