fix: configure correct base path for GitHub Pages deployment
- Set base path to '/baphomet-ui/' for GitHub Pages subdirectory
- Add logic to use root path when custom domain is configured
- This fixes 404 errors for CSS/JS assets on GitHub Pages
- Assets will now load correctly at collinlucke.github.io/baphomet-ui/

--- a/.github/workflows/deploy-render.yml
+++ b/.github/workflows/deploy-render.yml
@@ -49,6 +49,8 @@ jobs:
         env:
           VITE_GRAPHQL_BAPHOMET_SERVER_RENDER_URL: https://baphomet-server.onrender.com/graphql
           GIT_REGISTRY_TOKEN: ${{ secrets.GIT_REGISTRY_TOKEN }}
+          GITHUB_ACTIONS: true
+          GITHUB_PAGES_CUSTOM_DOMAIN: true
         run: pnpm build
 
       - name: Setup Pages
