feat: improve TypeScript types and fix ESLint configuration
- Fix ESLint config for v8 compatibility with flat config format
- Improve ProtectedRoute typing (remove any types)
- Fix reactive variable typing for getAllMoviesQueryVar
- Add proper null checks in App.tsx scroll handler
- Update lint script to allow reasonable warning threshold
- Remove sensitive console.log from authentication handlers
- Exclude build/dist files from linting
- Add comprehensive ESLint rules for React and TypeScript

--- a/.ionos.yml
+++ b/.ionos.yml
@@ -3,19 +3,19 @@
 
 # Project configuration
 project:
-  name: "baphomet-ui"
-  
+  name: 'baphomet-ui'
+
 # Custom domain configuration
 domains:
-  - "baphomet.collinlucke.com"
+  - 'baphomet.collinlucke.com'
 
 # Build configuration
 build:
   commands:
-    - "pnpm install"
-    - "pnpm run build"
-  outputDirectory: "dist"
-  
+    - 'pnpm install'
+    - 'pnpm run build'
+  outputDirectory: 'dist'
+
 # Environment variables (these will be set in GitHub secrets)
 environment:
   - GIT_REGISTRY_TOKEN
@@ -24,5 +24,5 @@ environment:
 # SPA routing configuration
 routing:
   rewrites:
-    - source: "/**"
-      destination: "/index.html"
+    - source: '/**'
+      destination: '/index.html'
