Clear pnpm cache befor it tries to install phantomartist

--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -43,6 +43,8 @@ jobs:
       - name: Install dependencies
         run: |
           npm install -g pnpm
+          # Clear cache to ensure latest packages are fetched
+          pnpm store prune
           pnpm install
 
       - name: Build for production
