feat: upgrade to PhantomArtist v1.1.0 with consolidated InputField and enhanced testing
- Update PhantomArtist dependency to v1.1.0 with new consolidated InputField component
- Replace legacy aria-* props with new ariaLabel and ariaDescribedby props in Button components
- Add comprehensive data-testid attributes to all form inputs and buttons for better testing
- Implement full authentication integration test suite with login, signup, and logout flows
- Add comprehensive form validation tests for LoginForm and SignupForm components
- Create StylesShowcase component for design system documentation and theming examples
- Fix development script configuration by removing NODE_ENV dependency
- Update routing structure with proper casing for page imports
- Rename ColorShowcase to StylesShowcase for better naming consistency
- Add extensive browser and unit testing coverage for authentication components
- Update test snapshots to reflect new accessibility attributes in Button components

--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "lint": "eslint . --report-unused-disable-directives --max-warnings 50",
     "lint:fix": "eslint . --report-unused-disable-directives --max-warnings 50 --fix",
     "preview": "vite preview",
-    "install:dev": "NODE_ENV=development pnpm install && pnpm link ../phantomartist",
+    "install:dev": "pnpm install && pnpm link ../phantomartist",
     "install:prod": "pnpm install"
   },
   "dependencies": {
     "@apollo/client": "^3.12.2",
-    "@collinlucke/phantomartist": "^1.0.5",
+    "@collinlucke/phantomartist": "^1.1.0",
     "@emotion/babel-plugin": "^11.13.5",
     "@emotion/styled": "^11.14.0",
     "@stylexjs/dev-runtime": "^0.7.5",
