fix: align login error handling and tests (v1.1.1)
- Unify error display in LoginForm to use general error banner
- Update AuthenticationIntegration.browser.test.tsx to mock errors via result.errors
- Use regex matchers for error assertions to handle fragmented text
- Bump

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.2",
-    "@collinlucke/phantomartist": "^1.1.0",
+    "@collinlucke/phantomartist": "1.1.1",
     "@emotion/babel-plugin": "^11.13.5",
     "@emotion/styled": "^11.14.0",
     "@stylexjs/dev-runtime": "^0.7.5",
