-- A bunch of scrolling stuff -- - Got scrolling to work, fetching more movies - there's still a little jankiness but it's mostly there - Fixed Add new movies button on mobile

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
     "sourceMap": true,
     "outDir": "dist"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "../phantomartist/lib/styling/hexToRgba.ts"],
   "exclude": ["node_modules", "**/unused-*"]
 }
